# aligntracker

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
prototype/: CMakeLists.txt  prototyping.cpp
src/: CMakeLists.txt  main.cpp  pch.h
src/include/glad/: gl.h
src/prototype/: CMakeLists.txt  prototyping.cpp
